Revert "Fixup overflow scroll"
This reverts commit b167f362d93281d64a133f5bf0220f3cfdbdd6d7.

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -168,7 +168,8 @@ pre {
   font-size: .9rem;
   line-height: 1.4;
   white-space: nowrap;
-  overflow: scroll;
+  white-space: nowrap;
+  overflow-x: auto;
   word-break: break-all;
   word-wrap: break-word;
   background-color: #f9f9f9;
